--- a/weather_app/index.html
+++ b/weather_app/index.html
@@ -2,6 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <script
+      src="https://code.jquery.com/jquery-2.1.1.js"
+      integrity="sha256-FA/0OOqu3gRvHOuidXnRbcmAWVcJORhz+pv3TX2+U6w="
+      crossorigin="anonymous">
+    </script>
     <script type="text/javascript" src="bundle.js"></script>
     <title>Weather Anywhere</title>
   </head>
