--- a/simple_google_map/index.html
+++ b/simple_google_map/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div class="search">
-      <input type="text" id="address" value="Sydney">
+      <input type="text" id="address" value="San Jose, PH">
       <input type="button" id="encode" value="Encode">
     </div>
     <div class="box">
