apply styling to weather app

--- a/weather_app/index.html
+++ b/weather_app/index.html
@@ -2,6 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cabin" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <script
       src="https://code.jquery.com/jquery-2.1.1.js"
       integrity="sha256-FA/0OOqu3gRvHOuidXnRbcmAWVcJORhz+pv3TX2+U6w="
